# GRAVITY

./: .gitignore  README.md  pyproject.toml
config/: source_overrides.example.json  sources.json
config/harmonization/: manual_countries.csv  source_overrides.csv
output/: latent_geodesic_fe_summary.md  latent_geodesic_penalized_summary.md  latent_geodesic_summary.md  ppml_summary.md  summary.md
scripts/: bootstrap.ps1
src/gravity_world/: __init__.py  cartogram.py  catalog.py  charts.py  cli.py  dyadic.py  flows.py  harmonize.py  http.py  io.py  latent_geodesic.py  latent_geodesic_fe.py  model.py  panel.py  pipeline.py  settings.py  stock.py  transform.py
src/gravity_world/sources/: manual_file.py  static_file.py  world_bank.py
src/gravity_world_migration.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
