[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gravity-world-migration"
version = "0.1.0"
description = "Data acquisition scaffold for a global migration gravity model."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
]

[project.scripts]
gravity-data = "gravity_world.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
